--- a/index.html
+++ b/index.html
@@ -12,14 +12,28 @@
 
 	<body ng-app="angularPlay">
 		<div ng-controller="mainCtrl as main">
-			Hei verden			
 		</div>
-		<alert></alert>
+
+		
+		<!-- Simple version of a directive console logging using a link function -->
+		<my-directive></my-directive>
+
+		<!-- Template injecting html in place of the directive -->
+		<hello-world></hello-world>
+
+		<!-- a basic directive taking a parameter "value" and printing the string input -->
+		<basic value="Look at me"></basic>
+
 		<script src="js/lib/angular.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
-		<script src="js/directives/alert.js"></script>
+		<script src="js/directives/bindingExample.js"></script>
+		<script src="js/directives/basic.js"></script>
+		<script src="js/directives/myDirective.js"></script>
+		<script src="js/directives/helloWorld.js"></script>
+
+
 	</body>
 </html>
