--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 	</head>
 
 	<body ng-app="angularPlay">
-		<div ng-controller="mainCtrl as main">
-		</div>
+
 
 		
 		<!-- Simple version of a directive console logging using a link function -->
-		<my-directive></my-directive>
+		<log-directive></log-directive>
 
 		<!-- Template injecting html in place of the directive -->
 		<hello-world></hello-world>
 
-		<!-- a basic directive taking a parameter "value" and printing the string input -->
+		<!-- a basic directive taking a parameter "value" and printing the string input, change the value of the "value" attribute and see what happens -->
 		<basic value="Look at me"></basic>
+
+		<div ng-controller="mainCtrl as main">
+
+			<!-- Directive setting up an ng-repeat based on a list from the main-controller scope-->
+			<repeat-directive></repeat-directive>
+			
+		</div>
+
 
 		<script src="js/lib/angular.min.js"></script>
 		<script src="js/app.js"></script>
@@ -31,8 +38,9 @@
 		<script src="js/directives/01-directives.js"></script>
 		<script src="js/directives/bindingExample.js"></script>
 		<script src="js/directives/basic.js"></script>
-		<script src="js/directives/myDirective.js"></script>
+		<script src="js/directives/logDirective.js"></script>
 		<script src="js/directives/helloWorld.js"></script>
+		<script src="js/directives/repeatDirective.js"></script>
 
 
 	</body>
