--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
 		<!-- Template injecting html in place of the directive -->
 		<hello-world></hello-world>
+		<!-- The same directiv can also be included like this: -->
+		<div hello-world></div>
+		<!-- or like this -->
+		<div class="hello-world"></div>
+
+
 
 		<!-- a basic directive taking a parameter "value" and printing the string input, change the value of the "value" attribute and see what happens -->
 		<basic value="Look at me"></basic>
