--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	</head>
 
 	<body ng-app="angularPlay">
-
-
 		
 		<!-- Simple version of a directive console logging using a link function -->
 		<log-directive></log-directive>
+		
+
 
 		<!-- Template injecting html in place of the directive -->
 		<hello-world></hello-world>
@@ -23,18 +23,17 @@
 		<div hello-world></div>
 		<!-- or like this -->
 		<div class="hello-world"></div>
-
-
-
 		<!-- a basic directive taking a parameter "value" and printing the string input, change the value of the "value" attribute and see what happens -->
 		<basic value="Look at me"></basic>
-
+		
+		
 		<div ng-controller="mainCtrl as main">
-
 			<!-- Directive setting up an ng-repeat based on a list from the main-controller scope-->
 			<repeat-directive></repeat-directive>
-			
+			<!-- ng-model takes object, text the literal string and update is a function -->
+			<sps-edit ng-model="main.text" text="{{main.text}}" update="main.updateModel(argument_name)"></sps-edit>
 		</div>
+
 
 
 		<script src="js/lib/angular.min.js"></script>
@@ -47,7 +46,7 @@
 		<script src="js/directives/logDirective.js"></script>
 		<script src="js/directives/helloWorld.js"></script>
 		<script src="js/directives/repeatDirective.js"></script>
-
+		<script src="js/directives/editDirective.js"></script>
 
 	</body>
 </html>
