--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 
 		<script src="js/lib/angular.min.js"></script>
+		<script src="js/lib/angular-ui-router.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
