--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 
 
-		<script src="js/lib/angular.min.js"></script>
+		<script src="js/node_modules/angular/angular.min.js"></script>
+		<script src="js/node_modules/ui-router/angular-ui-router.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
