--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<script src="node_modules/angular/angular.min.js"></script>
 		<script src="node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/services/01-services.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
