--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	</head>
 
 	<body ng-app="angularPlay">
-
+		<button ui-sref="directives">Directives</button>
+		<button ui-sref="controllerAs">ControllerAs syntax</button>
 		<div ui-view></div>
 
 		<script src="node_modules/angular/angular.min.js"></script>
@@ -19,7 +20,8 @@
 		<script src="js/app.js"></script>
 		<script src="js/services/01-services.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
-		<script src="js/controllers/mainCtrl.js"></script>
+		<script src="js/controllers/controllerAs.js"></script>
+		<script src="js/controllers/directiveCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
 		<script src="js/directives/bindingExample.js"></script>
 		<script src="js/directives/basic.js"></script>
