Some more work on controllerAs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<body ng-app="angularPlay">
 		<button ui-sref="directives">Directives</button>
 		<button ui-sref="controllerAs">ControllerAs syntax</button>
+		<button ui-sref="usingScope">Using scope</button>
+		
 		<div ui-view></div>
 
 		<script src="node_modules/angular/angular.min.js"></script>
