controllerAs vs $scope

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/controllerAs.js"></script>
 		<script src="js/controllers/directiveCtrl.js"></script>
+		<script src="js/controllers/usingScope.js"></script>
+		<script src="js/controllers/nestedCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
 		<script src="js/directives/bindingExample.js"></script>
 		<script src="js/directives/basic.js"></script>
