--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<button ui-sref="directives">Directives</button>
 		<button ui-sref="controllerAs">ControllerAs syntax</button>
 		<button ui-sref="usingScope">Using scope</button>
+		<button ui-sref="services">services</button>
 		
 		<div ui-view></div>
 
@@ -21,11 +22,14 @@
 		<script src="node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/services/01-services.js"></script>
+		<script src="js/services/helloWorldService.js"></script>
 		<script src="js/controllers/01-controllers.js"></script>
 		<script src="js/controllers/controllerAs.js"></script>
 		<script src="js/controllers/directiveCtrl.js"></script>
 		<script src="js/controllers/usingScope.js"></script>
 		<script src="js/controllers/nestedCtrl.js"></script>
+		<script src="js/controllers/nestedCtrlAs.js"></script>
+		<script src="js/controllers/serviceCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
 		<script src="js/directives/bindingExample.js"></script>
 		<script src="js/directives/basic.js"></script>
