--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
 	</head>
 
 	<body ng-app="angularPlay">
-		<div ng-controller="TopCtrl as top">
+		<div ng-controller="TopCtrl as top" style="border-bottom: solid;">
+		<p>
+			Decorated exceptionHandler displaying exceptions as they appear <br>
 			{{top.errorList}}
 			<button ng-click="top.breakStuff()">Break stuff</button>
+		</p>
+			
 		</div>
-		<button ui-sref="directives">Directives</button>
-		<button ui-sref="controllerAs">ControllerAs syntax</button>
-		<button ui-sref="usingScope">Using scope</button>
-		<button ui-sref="services">services</button>
-		
+		<div style="border-bottom: solid;">
+			<p>
+				<button ui-sref="directives">Directives</button>
+				<button ui-sref="controllerAs">ControllerAs syntax</button>
+				<button ui-sref="usingScope">Using scope</button>
+				<button ui-sref="services">services</button>
+				<button ui-sref="ngif">ng-if vs ng-show</button>
+			</p>
+		</div>
 
 
 		<div ui-view></div>
@@ -39,6 +47,7 @@
 		<script src="js/controllers/nestedCtrl.js"></script>
 		<script src="js/controllers/nestedCtrlAs.js"></script>
 		<script src="js/controllers/serviceCtrl.js"></script>
+		<script src="js/controllers/ngifCtrl.js"></script>
 		<script src="js/directives/01-directives.js"></script>
 		<script src="js/directives/bindingExample.js"></script>
 		<script src="js/directives/basic.js"></script>
