--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 	<head>
@@ -33,7 +33,7 @@
 		<div ui-view></div>
 
 		<script src="node_modules/angular/angular.min.js"></script>
-		<script src="node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
+		<script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/configuration/exceptionHandler.js"></script>
 		<script src="js/services/01-services.js"></script>
